infrastructure/configs/base/contour/gateway.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour
spec:
  controllerName: projectcontour.io/gateway-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: contour
  listeners:    
    # http
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    #internal
    - name: internal-https
      hostname: "replaced.by.env"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
    # external
    - name: external-https
      hostname: "*.${domain}"
      port: 444
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${domain}
      allowedRoutes:
        namespaces:
          from: All
